static/style.css
.bi-x-circle-fill {
    cursor:pointer;
    visibility: hidden;
}

#table_input tr:hover .bi-x-circle-fill {
    visibility: visible;
}

#table_cheminput tr:hover .bi-x-circle-fill {
    visibility: visible;
}

h3 {text-align: center;}

.navbar a {
    color: white;
}

.accordion-button:after {
margin-left: 0;
margin-right:0.5em;
order: -1;
background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
}

.accordion-button {
 background-color: #5dc27b !important;
 color: white !important;
}

.inputpagebtn {
    border-color: #5dc27b !important;
    background-color: #5dc27b !important;
    width:150px;
}

.homedesc {
    font-size: 20px;
}

.homebutton {
    width: 70%;
    background-color: #8fd29f;
    border: black 2px solid;
    border-radius: 0;
    box-shadow: 6px 5px 10px rgba(0, 0, 0, 0.5), inset 0.2em 0.2em 0.2em 0 rgba(255,255,255,0.5), inset -0.2em -0.2em 0.2em 0 rgba(0,0,0,0.5);
    min-height: 115px;
}

.homebutton img {
    width: 60%;
}

.homebutton:hover {
    background-color: #6dc07f;
    border: #2c2a2a 2px solid;
}

.homebutton:active {
    background-color: #439f66 !important;
    border: #131313 2px solid !important;
}

#middlerow {
    padding-top: 10%;
    padding-bottom: 10%;
}

#mousemonitor {
    height: 150px;
}

#drug {
    height: 75px;
}

#homeinfo {
    margin-top: 35px;
}

#addRow {
    height: 41px;
    width:  calc(100% - var(--bs-gutter-x));
    margin-left: calc(var(--bs-gutter-x) * .5);
    background-color: #f0f0f0;
    display: block;
    margin: auto;
    text-align:center;
    transform: translateY(-8px);
    cursor:pointer;
}

#addIcon {
    display: block;
    margin: auto;
    height: 100%;
    color: #808080;
}

